# backend-common-components

./: .clang-format  README.md
database-connection-pool/: README.md
database-connection-pool/examples/: CMakeLists.txt  test.cpp  test_mysql.cpp  test_mysql_factory.cpp  test_pool.cpp
database-connection-pool/include/conn-pool/: ConnectionPool.h  pooledConnGuard.h
database-connection-pool/include/database/: DatabaseType.h  IConnectionFactory.h  IDatabaseConnection.h  IResultSet.h  MySQLConnection.h  MySQLFactory.h  MySQLResultSet.h
database-connection-pool/include/monitor/: IHealthChecker.h  MySQLHealthChecker.h  PoolStatistics.h
database-connection-pool/src/: ConnectionPool.cpp  MySQLConnection.cpp  MySQLFactory.cpp  MySQLHealthChecker.cpp  MySQLResultSet.cpp  pooledConnGuard.cpp
demos/demo1/: CMakeLists.txt  config.ini  plan.md
demos/demo1/include/: app.h  bootstrap.h  concurrent_test.h  consistency_checker.h  error_codes.h  inventory_controller.h  inventory_repository.h  inventory_service.h  redis_lua.h
demos/demo1/src/: app.cpp  bootstrap.cpp  concurrent_test.cpp  consistency_checker.cpp  inventory_controller.cpp  inventory_repository.cpp  inventory_service.cpp  main.cpp  redis_lua.cpp
error/: README.md
error-framework/: README.md
error-framework/examples/basic/: basic  main.cpp
error-framework/examples/module/: db_errors.h  main.cpp  module
error-framework/include/ef/: ef.h  error.h  error_def.h  error_kind.h  macros.h  result.h  source_location.h  utils.h
error-handling-framework/: README.md
error-handling-framework/examples/: error_example.cpp
error-handling-framework/include/error/: error.h  error_kind.h  error_utils.h  macros.h  result.h  source_location.h
error/examples/: CMakeLists.txt  example1.cpp  example2.cpp  test_error.h
error/include/: ef.h  error.h  error_def.h  error_kind.h  macros.h  result.h  utils.h
error/src/: error.cpp  error_kind.cpp
ini/: README.md
ini/examples/: CMakeLists.txt  advanced_usage.cpp  example.cpp  test.ini
ini/include/: ini.h  value.h
ini/src/: ini.cpp  value.cpp
log/: README.md
log/benchmark/: README.md  benchmark  benchmark.cpp
log/examples/: CMakeLists.txt  example_multiThread.cpp  example_singleThread.cpp
log/include/: log.h
log/src/: log.cpp
my-error/: err.h  result.h
my-error/example/: err.h  test.cpp
redis-connection-pool/: CMakeLists.txt  README.md  install.md
redis-connection-pool/examples/: CMakeLists.txt  test.cpp  test_ops.cpp  test_pool.cpp
redis-connection-pool/include/redis-pool/: PoolStatistics.h  RedisConnGuard.h  RedisConnectionFactory.h  RedisConnectionPool.h  RedisHealthChecker.h
redis-connection-pool/src/: RedisConnGuard.cpp  RedisConnectionFactory.cpp  RedisConnectionPool.cpp  RedisHealthChecker.cpp
